fix button spacing

--- a/templates/van-pdf.css
+++ b/templates/van-pdf.css
@@ -41,7 +41,10 @@ img {
 	text-decoration: none;
 	font-weight: 700;
 	font-size: 1.25rem;
-	margin: 2rem auto;
+	margin-bottom: 3rem;
+	margin-top: 0;
+	margin-left: auto;
+	margin-right: auto;
 	display: block;
 	width: 125px;
 	text-align: center;
